Fri Oct 18 13:34:08 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* include/tds_sysdep_public.h.in:
	- Better guess at 64-bit int for win32 native,
	  as suggested by jkl.

Fri Oct 18 13:29:18 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* include/.cvsignore:
	- Don't ignore tds_sysdep_private.h

Fri Oct 18 13:26:37 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* include/tds_configs.h include/tds_sysdep_private.h:
	- Pull in freetds_sysconfdir.h from tds_configs.h

Fri Oct 18 13:18:34 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* configure.in include/Makefile.am
	  include/tds_sysdep_private.h (added)
	  include/tds_sysdep_private.h.in (removed):
	- Conform to GNU coding standards when dealing with sysconfdir.

Fri Oct 18 19:03:50 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* src/apps/freebcp.c src/odbc/convert_sql2string.c:
	* src/odbc/convert_tds2sql.c src/odbc/odbc.c:
	* src/pool/util.c src/tds/iconv.c src/tds/read.c:
	- fix some warnings compiling with -Wall (some was error)

Fri Oct 18 12:14:43 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* configure.in:
	- Pass additional macro definitions in CPPFLAGS instead of CFLAGS.

Fri Oct 18 11:31:39 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* configure.in src/tds/threadsafe.c:
	- Properly initialize hostent_data structures.
	- Wrap use of these structures in sethostent_r()/endhostent_r() 
	  for safety.

Fri Oct 18 14:59:06 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* doc/userguide.sgml src/odbc/connectparams.c src/odbc/odbc.c:
	- added SQLSetConnectAttr function
	- added some DSN configuration options

Fri Oct 18 11:32:40 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* doc/userguide.sgml include/tds.h include/tdsstring.h:
	* src/odbc/connectparams.c src/odbc/connectparams.h:
	* src/odbc/odbc.c src/tds/config.c src/tds/mem.c:
	* src/tds/tdsstring.c:
	- ODBC: implemented DSNless and freetds.conf'less connections

Fri Oct 18 00:35:48 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>