@@ -34,13 +34,44 @@
 #include <dmalloc.h>
 #endif
 
-static char  software_version[]   = "$Id: tdsstring.c,v 1.2 2002-10-18 09:34:06 freddy77 Exp $";
+static char  software_version[]   = "$Id: tdsstring.c,v 1.3 2002-10-18 18:26:12 freddy77 Exp $";
 static void *no_unused_var_warn[] = {software_version,
                                      no_unused_var_warn};
+
+
+/**
+ * \defgroup dstring Dynamic string functions
+ * Handle dynamic string. In this string are always valid 
+ * (you don't have NULL pointer, only empty string)
+ */
 
 /* This is in a separate module because we use the pointer to discriminate allocated and not allocated */
 char tds_str_empty[] = "";
 
+/** \addtogroup dstring
+ *  \@{ 
+ */
+
+/** clear all string filling with zeroes (mainly for security reason) */
+void tds_dstr_zero(char **s)
+{
+	if (*s) memset(*s,0,strlen(*s));
+}
+
+/** free string */
+void tds_dstr_free(char **s)
+{
+	if (*s != tds_str_empty)
+		free(*s);
+}
+
+/**
+ * Set string to a given buffer of characters
+ * @param s      dynamic string
+ * @param src    source buffer
+ * @param length length of source buffer
+ * @return string copied or NULL on memory error
+ */
 char* tds_dstr_copyn(char **s,const char* src,unsigned int length)
 {
 	if (*s != tds_str_empty)
@@ -51,3 +82,32 @@ char* tds_dstr_copyn(char **s,const char* src,unsigned int length)
 	(*s)[length] = 0;
 	return *s;
 }
+
+/**
+ * set a string from another buffer. 
+ * The string will use the supplied buffer (it not copy the string),
+ * so it should be a pointer returned by malloc.
+ * @param s      dynamic string
+ * @param src    source buffer
+ * @return string copied or NULL on memory error
+ */
+char* tds_dstr_set(char **s,char *src)
+{
+	if (*s != tds_str_empty) free(*s);
+	return (*s = (src));
+}
+
+/**
+ * copy a string from another
+ * @param s      dynamic string
+ * @param src    source buffer
+ * @return string copied or NULL on memory error
+ */
+char* tds_dstr_copy(char **s,const char* src)
+{
+	if (*s != tds_str_empty)
+		free(*s);
+	return (*s = strdup(src));
+}
+
+/** \@} */
